Changes in Version 0.3

    o Fixed issue where print methods sometimes wrapped over lines.

Changes in Version 0.2

    o Added argument "nested" to vuongtest(), allowing the user
      to specify whether or not candidate models are nested.  This
      impacts the limiting distribution of the Vuong LRT.

    o Added argument "adj" to vuongtest(), allowing the user
      to obtain test statistics with AIC or BIC adjustments.

    o print methods no longer display the full call of each model
      (just the first line).

    o BIC intervals added for objects of class hurdle, zeroinfl, 
      mlogit (were missing because they didn't have an nobs method).