@@ -1,5 +1,9 @@
 Changes in Version 0.3
 
+    o Added "Getting started" vignette
+
+    o Changes to handle lavaan 0.5-18's treatment of equality constraints
+
     o Fixed issue where print methods sometimes wrapped over lines.
 
 Changes in Version 0.2
